# midi-mapper

./: HISTORY.txt  pyproject.toml
basic/: midiout.py
midi2command/: example.cfg  midi2command.py
midifilter/: __main__.py
